<?xml version="1.0"?>
<package format="3">
  <name>rdkx5_net_bridge</name>
  <version>0.1.0</version>
  <description>Network (BLE/Wi‑Fi) topic ingress bridge to existing ROS topics</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_type>ament_python</build_type>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>